Fix jdk8 incompaitable changes
Signed-off-by: Peter Nied <peternied@hotmail.com>